--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-main-title: "PHOT&#8226;O&#8226;RAMA"
-subtitle: "Photo Journal"
-description: "Photography and more"
+main-title: "pixelartist_mr"
+subtitle: ""
+description: "Photography by Ashuthosh"
 images:
  - image_path: /img/slider/home01.jpg
    gallery-folder: /img/slider/
@@ -125,7 +125,7 @@ color:#dddddd; target="_blank" title="Github">
                      </span>
                    {% endif %}
 <li>
-    <a href="mailto:{{ site.email }}" style="
+    <a href="mailto:{{ ashuthosh_mr@pm.me }}" style="
 color:#dddddd; target="_blank" title="Email">
               <i class="fa fa-envelope-o"></i></span>
           </a> </li>
