--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ main-title: "pixelartist_mr"
 subtitle: ""
 description: "Photography by Ashuthosh"
 images:
- - image_path: /img/slider/home01.jpg
+ - image_path: /img/slider/DSC00843-01.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/home02.jpg
+ - image_path: /img/slider/DSC02010-02.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/home03.jpg
+ - image_path: /img/slider/_DSC4918.JPG
    gallery-folder: /img/slider/
 ---
 
