--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ images:
    gallery-folder: /img/slider/
  - image_path: /img/slider/DSC02010-02.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/_DSC4918.JPG
+ - image_path: /img/slider/DSC02769-01.jpeg
    gallery-folder: /img/slider/
 ---
 
