--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ main-title: "pixelartist_mr"
 subtitle: ""
 description: "Photography by Ashuthosh"
 images:
- - image_path: /img/slider/DSC00843-01.jpeg
+ - image_path: /img/slider/slide1.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/DSC02010-02.jpeg
+ - image_path: /img/slider/slide2.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/DSC02769-01.jpeg
+ - image_path: /img/slider/slide3.jpg
    gallery-folder: /img/slider/
 ---
 
