--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ images:
    gallery-folder: /img/slider/
  - image_path: /img/slider/slide2.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/slide3.jpg
+ - image_path: /img/slider/slide3.jpeg
    gallery-folder: /img/slider/
 ---
 
