--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -1,21 +1,18 @@
 ---
 layout: page
-title: "album"
-description: "masonry"
+title: "Bhootha Kola"
+description: "Photos captured at a village in Karnataka that showcases the culture and traditions"
 active: gallery
 header-img: "img/gallery-bg.jpg"
 album-title: "my 2nd album"
 images:
- - image_path: /gallery/archive/g02/bg1.jpg
-   caption: IMAGE TITLE
+ - image_path: /gallery/G2/1.jpeg
+   caption: IMAGE TITLE1
    mfp-title: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g02/bg2.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g02/bg3.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/2.jpeg
+   caption: IMAGE TITLE2
+   copyright: © Ashuthosh
 ---
 
 <html class="no-js" lang="en">
