--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,6 +9,10 @@ images:
    gallery-folder: /gallery/gallery01/
    gallery-name: gallery1
    gallery-date: July 2015
+ - image_path: /gallery/albums/alb02.jpg
+   gallery-folder: /gallery/gallery02/
+   gallery-name: Bhootha Kola
+   gallery-date: July 2015
 ---
 
 <html class="no-js" lang="en">
