--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -1,17 +1,43 @@
 ---
 layout: page
 title: "Bhootha Kola"
-description: "Photos captured at a village in Karnataka that showcases the culture and traditions"
+description: "Photos captured at a village in Karnataka that showcases the culture and traditions of the region"
 active: gallery
-header-img: "img/gallery-bg.jpg"
-album-title: "my 2nd album"
+header-img: "gallery/E1/5.JPG"
+album-title: "Bhootha Kola"
 images:
  - image_path: /gallery/G2/1.jpeg
-   caption: IMAGE TITLE1
-   mfp-title: IMAGE TITLE
+   caption: Preparation
    copyright: © Ashuthosh
  - image_path: /gallery/G2/2.jpeg
-   caption: IMAGE TITLE2
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/2.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/3.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/4.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/5.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/6.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/7.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/8.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/9.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G2/10.jpeg
+   caption: 
    copyright: © Ashuthosh
 ---
 
