--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,13 +3,9 @@ layout: page
 title: "ALBUMS"
 description: "archive"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "gallery/5.JPG"
 images:
- - image_path: /gallery/albums/alb01.jpg
-   gallery-folder: /gallery/gallery01/
-   gallery-name: gallery1
-   gallery-date: July 2015
- - image_path: /gallery/albums/alb02.jpg
+ - image_path: /gallery/G2/1.jpeg
    gallery-folder: /gallery/gallery02/
    gallery-name: Bhootha Kola
    gallery-date: July 2015
