--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@ images:
  - image_path: /gallery/G2/1.jpeg
    gallery-folder: /gallery/gallery02/
    gallery-name: Bhootha Kola
-   gallery-date: July 2015
+   gallery-date: Feb 2023
 ---
 
 <html class="no-js" lang="en">
@@ -56,9 +56,9 @@ images:
 
 
 <br>
-<h6><p>Image Source: <a href="https://unsplash.com/photos/YOT6kS8YtEA/">Unsplash</a></p></h6>
 
-<!-- jQuery -->    
+<!-- jQuery  <h6><p>Image Source: <a href="https://unsplash.com/photos/YOT6kS8YtEA/">Unsplash</a></p></h6>
+-->    
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/js/retina.min.js"></script>
