--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -3,14 +3,11 @@ layout: page
 title: "Bhootha Kola"
 description: "Photos captured at a village in Karnataka that showcases the culture and traditions of the region"
 active: gallery
-header-img: "gallery/E1/5.JPG"
+header-img: "gallery/E1/4.jpeg"
 album-title: "Bhootha Kola"
 images:
  - image_path: /gallery/G2/1.jpeg
    caption: Preparation
-   copyright: © Ashuthosh
- - image_path: /gallery/G2/2.jpeg
-   caption: 
    copyright: © Ashuthosh
  - image_path: /gallery/G2/2.jpeg
    caption: 
