--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,12 +3,16 @@ layout: page
 title: "ALBUMS"
 description: "archive"
 active: gallery
-header-img: "gallery/5.JPG"
+header-img: "gallery/E1/4.jpeg"
 images:
  - image_path: /gallery/G2/1.jpeg
    gallery-folder: /gallery/gallery02/
    gallery-name: Bhootha Kola
    gallery-date: Feb 2023
+ - image_path: /gallery/G3/1.jpeg
+   gallery-folder: /gallery/gallery03/
+   gallery-name: Dance
+   gallery-date: 
 ---
 
 <html class="no-js" lang="en">
