--- a/gallery/gallery03/index.html
+++ b/gallery/gallery03/index.html
@@ -1,21 +1,21 @@
 ---
 layout: page
-title: "album"
-description: "masonry"
+title: "Dance"
+description: "Bharathanatyam and Mohiniyattam pictures clicked in Bengaluru"
 active: gallery
-header-img: "img/gallery-bg.jpg"
-album-title: "my 3rd album"
+header-img: "gallery/E1/4.jpeg"
+album-title: "Dance album"
 images:
- - image_path: /gallery/archive/g03/bg1.jpg
+ - image_path: /gallery/G3/1.jpeg
    caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g03/bg2.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g03/bg3.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
+   mfp-title: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G3/2.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G3/4.jpeg
+   caption: 
+   copyright: © Ashuthosh
 ---
 
 <html class="no-js" lang="en">
