--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ main-title: "pixelartist_mr"
 subtitle: ""
 description: "Photography by Ashuthosh"
 images:
- - image_path: /img/slider/slide1.jpeg
-   gallery-folder: /img/slider/
+ - image_path: /gallery/E1/1.jpeg
+   gallery-folder: /gallery/E1/
  - image_path: /img/slider/slide2.jpeg
    gallery-folder: /img/slider/
- - image_path: /img/slider/slide3.jpeg
-   gallery-folder: /img/slider/
+ - image_path: /gallery/E1/4.jpeg
+   gallery-folder: /gallery/E1/
 ---
 
 
