--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ main-title: "pixelartist_mr"
 subtitle: ""
 description: "Photography by Ashuthosh"
 images:
- - image_path: /gallery/E1/1.jpeg
+ - image_path: /gallery/E1/1.jpg
    gallery-folder: /gallery/E1/
  - image_path: /img/slider/slide2.jpeg
    gallery-folder: /img/slider/
