--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "ALBUMS"
-description: "archive"
+description: ""
 active: gallery
 header-img: "gallery/E1/4.jpeg"
 images:
