--- a/about/index.html
+++ b/about/index.html
@@ -1,22 +1,21 @@
 ---
 layout: page
 title: "About"
-description: "Statement"
+description: "Journey so far"
 active: about
 header-img: "img/about-bg.jpg"
 ---
 
-<h1>CREDITS</h1>
-<br>
-<br>
-<h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
-<br>
-<h4>All the commits were performed with the help of <a href="https://www.sourcetreeapp.com/">Source Tree</a> app.</h4>
-<br> 
-<h4>The photos are organised in galleries with <a href="https://github.com/metafizzy/isotope">ISOTOPE</a>.</h4>
-<br>
-<h4>The search overlay function code lies in <a href="https://github.com/chinchang/super-search">SUPER SEARCH</a>.</h4>
 
-
+<br>
+<br>
+<p> I started doing photography in the year 2010. Sony NEX-3 was the first camera that I used to shoot. Since it was a mirrorless camera, I could quickly
+  learn about the basics of photography. I do not remember shooting in Auto mode. Interest in astrophysics motivated me to play with settings to capture
+  stars, moon and milkyway galaxy. I experimented with different settings which helped me learn light trail photography and other techniques. I used to 
+  shoot a lot of pictures of nature, birds and animals which I have reduced now. My focus shifted towards Astro and Street photography.
+  In 2017, my parents gifted me Sony a6000 which was a mirrorless camera. I got a vintage lens (1984) from Kiev in 2019 which was fully manual and adaptable
+  to my a6000. With it I have shot the streets of Bengaluru (K.R Market, Lalbagh, Brigad road). Unfortunately, in 2021 my a6000 was damaged and it made me
+  pause photography for a while. 
+  In 2022, I bought a Sony a6100 and have resumed my photography. The motivation behind this website is to showcase my photography and improvise the same.
 <br>
 <h6><p>Image Source: <a href="https://unsplash.com/photos/Dwheufds6kQ/">Unsplash</a></p></h6>
