--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,6 +5,10 @@ description: ""
 active: gallery
 header-img: "gallery/E1/4.jpeg"
 images:
+ - image_path: /gallery/G1/1.jpeg
+   gallery-folder: /gallery/gallery02/
+   gallery-name: Baneerghatta zoo
+   gallery-date: Feb 2020
  - image_path: /gallery/G2/1.jpeg
    gallery-folder: /gallery/gallery02/
    gallery-name: Bhootha Kola
