--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -1,20 +1,38 @@
 ---
 layout: page
-title: "album"
-description: "masonry"
+title: "Baneerghatta zoo"
+description: ""
 active: gallery
-header-img: "img/gallery-bg.jpg"
-album-title: "my 1st album"
+header-img: "gallery/E1/4.jpeg"
+album-title: "Baneerghatta zoo"
 images:
- - image_path: /gallery/archive/g01/bg1.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g01/bg2.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g01/bg3.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
+ - image_path: /gallery/G1/1.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/2.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/3.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/4.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/5.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/6.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/7.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/8.jpeg
+   caption: 
+   copyright: © Ashuthosh
+ - image_path: /gallery/G1/9.jpeg
+   caption: 
+   copyright: © Ashuthosh
 ---
 
 <html class="no-js" lang="en">
