--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-main-title: "pixelartist_mr"
+main-title: "pixelartist"
 subtitle: ""
 description: "Photography by Ashuthosh"
 images:
