--- a/gallery/gallery03/index.html
+++ b/gallery/gallery03/index.html
@@ -13,6 +13,9 @@ images:
  - image_path: /gallery/G3/2.jpeg
    caption: 
    copyright: © Ashuthosh
+ - image_path: /gallery/G3/3.jpeg
+   caption: 
+   copyright: © Ashuthosh
  - image_path: /gallery/G3/4.jpeg
    caption: 
    copyright: © Ashuthosh
